[tool.poetry]
name = "async"
version = "0.1.0"
description = "Celery monitor tooling"
authors = ["Joao P Dubas <joao.dubas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = {version = "^4.4", extras = ["redis", "rabbitmq"]}
influxdb = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
