[tool.poetry]
name = "consumer-py"
version = "0.1.0"
description = "Redis stream consumer"
authors = ["Joao P Dubas <joao.dubas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.32"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
