[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "consumer-py"
version = "0.1.0"
description = "Redis stream consumer"
authors = ["Joao P Dubas <joao.dubas@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.27"
