[tool.poetry]
name = "producer-py"
version = "0.1.0"
description = "Redis stream producer"
authors = ["Joao P Dubas <joao.dubas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^4.0"

[tool.poetry.dev-dependencies]
ipython = "^7.29"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
